# HEVolRender

./: .gitignore  CMakeLists.txt  README.md  debug.md  index.md
app/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanWindow.cpp  VulkanWindow.hpp  hellovulkanwidget.cpp  hellovulkanwidget.h  hellovulkanwidget.qrc  main.cpp  trianglerenderer.cpp  trianglerenderer.h  vk_layer_settings.txt
assets/: performance-numbers.md  performance-numbers.numbers
assets/QT-Vulkan-mac_crashes/: c1.txt  c2.txt  c3.txt
assets/notes/: shaderNotes.text  toDecCalc.txt
include/cpp_isaac64/: _github-link.webloc  isaac64_engine.h
include/isaac-engine/: _github-link.webloc
res/shaders/: axis.vert  bigIntTest.frag  cube.vert  encryptedXRay.frag  encryptedXRay.vert  quad.frag  quad.vert  xray.vert
res/shaders/lib/: CameraUniformBufferObject.glsl  EncryptedVolumeUniformBufferObject.glsl  Model2dUniformBufferObject.glsl  ModelUniformBufferObject.glsl  VolumeUniformBufferObject.glsl  assert.h.glsl  quadVertices.glsl  uniforms.glsl
res/shaders/math/: BigIntUtil.glsl  BigIntUtil.h.glsl  MontgomeryReducer.glsl  UFixBigInt.glsl  UFixBigInt.h.glsl  bigInt_defs.h.glsl
src/math/: BigInt.cpp  BigInt.h  BigInt.hpp  BigIntUtil.cpp  BigIntUtil.hpp  BigInt_wordDef.h  BigInt_wordDev.h  MagnitudeView.cpp  MagnitudeView.hpp  MontgomeryReducer.hpp  MontgomeryReducer_impl.hpp  PerformanceTest.cpp  PerformanceTest.hpp  Random.cpp  Random.hpp  SArbBigInt.cpp  SArbBigInt.hpp  SArbBigInt_impl.hpp  SFixBigInt.hpp  SFixBigInt_impl.hpp  SInfinitBigInt.cpp  SInfinitBigInt.h  SInfinitBigInt.hpp  UArbBigInt.cpp  UArbBigInt.hpp  UArbBigInt_impl.hpp  UFixBigInt.hpp  UFixBigInt_impl.hpp  exceptions.hpp
src/paillier/: Paillier_typeDev.h
src/paillier/crypto/: PublicKey.cpp  PublicKey.hpp  SecureKey.cpp  SecureKey.hpp
src/paillier/math/: EncodedNumber.cpp  EncodedNumber.hpp  EncodingScheme.cpp  EncodingScheme.hpp  EncryptedNumber.cpp  EncryptedNumber.hpp  PaillierContext.cpp  PaillierContext.hpp  exceptions.hpp
src/rendering/: Axis.cpp  Axis.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  CubeMap.cpp  CubeMap.hpp  EncryptedVulkanRenderer.cpp  EncryptedVulkanRenderer.hpp  EncryptedXRay.cpp  EncryptedXRay.hpp  FrameBuffer.cpp  FrameBuffer.hpp  ImageDebugView.cpp  ImageDebugView.hpp  PlainVulkanRenderer.cpp  PlainVulkanRenderer.hpp  Renderable.cpp  Renderable.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanUtility.cpp  VulkanUtility.hpp  XRay.cpp  XRay.hpp
src/rendering/data/: BigIntGpuVolumeSet.cpp  BigIntGpuVolumeSet.hpp  CryptoUtil.cpp  CryptoUtil.hpp  GpuVolume.cpp  GpuVolume.hpp  Image.hpp  ImageUtil.cpp  ImageUtil.hpp  Image_impl.hpp  Volume.hpp  VolumeFactory.hpp  VolumeFactory_impl.hpp  Volume_impl.hpp
src/rendering/test/: BigIntGpuTestOperation_types.hpp  BigIntTestCase.cpp  BigIntTestCase.hpp  BigIntTestFactory.cpp  BigIntTestFactory.hpp  BigIntTestObj.cpp  BigIntTestObj.hpp
src/rendering/uniform/: CameraData.cpp  CameraData.hpp  CameraUniformBufferObject.cpp  CameraUniformBufferObject.hpp  CubeUniformBufferObject.hpp  DebugQuadUniformBufferObject.hpp  EncryptedVolumeData.hpp  EncryptedXRayUniformBufferObject.hpp  Model2dData.hpp  ModelData.cpp  ModelData.hpp  VolumeData.hpp  XRayUniformBufferObject.hpp
src/rendering/vertex/: ColoredVertex.cpp  ColoredVertex.hpp
src/util/: DurationDisplay.cpp  DurationDisplay.hpp
test/: BigInt.cpp  FixBigInt_helper.h  PaillierCrypto.cpp  PaillierMath.cpp  SArbBigInt.cpp  SFixBigInt.cpp  SInfinitBigInt.cpp  UArbBigInt.cpp  UFixBigInt.cpp  test.cpp
